[gd_scene load_steps=4 format=3 uid="uid://novel_panel_001"]

[ext_resource type="Script" path="res://view/novel/novel_panel.gd" id="1_novel_panel"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.08, 0.06, 0.05, 0.92)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.9, 0.7, 0.3, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_size = 6
shadow_color = Color(0, 0, 0, 0.6)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_choice"]
bg_color = Color(0.15, 0.12, 0.1, 0.85)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.7, 0.5, 0.2, 0.8)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="NovelPanel" type="CanvasLayer"]
layer = 100
script = ExtResource("1_novel_panel")

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_left = 150.0
offset_top = 50.0
offset_right = 1130.0
offset_bottom = 670.0
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="HeaderBar" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HeaderBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.9, 0.5, 1)
theme_override_font_sizes/font_size = 20
text = "Dialogue"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HeaderBar"]
custom_minimum_size = Vector2(50, 35)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 18
text = "[X]"
flat = true

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ContentContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="LeftPanel" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme_override_constants/separation = 15

[node name="BackgroundContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer/LeftPanel"]
custom_minimum_size = Vector2(250, 200)
layout_mode = 2
size_flags_vertical = 0

[node name="BackgroundImage" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer/LeftPanel/BackgroundContainer"]
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="AvatarContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer/LeftPanel"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
size_flags_vertical = 3

[node name="AvatarImage" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer/LeftPanel/AvatarContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
expand_mode = 1
stretch_mode = 6

[node name="RightPanel" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="SpeakerNameLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer/RightPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.4, 1)
theme_override_font_sizes/font_size = 18
text = "Speaker Name"

[node name="DialogueScroll" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer/RightPanel"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="DialogueLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer/RightPanel/DialogueScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.95, 0.92, 0.85, 1)
theme_override_font_sizes/font_size = 16
text = "Dialogue text will appear here..."
autowrap_mode = 3
vertical_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer/RightPanel"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="ChoicesContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer/RightPanel"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 8

[node name="ChoiceButton1" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer/RightPanel/ChoicesContainer"]
visible = false
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.85, 0.7, 1)
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_choice")
theme_override_styles/hover = SubResource("StyleBoxFlat_choice")
theme_override_styles/pressed = SubResource("StyleBoxFlat_choice")
text = "Choice 1"

[node name="ChoiceButton2" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer/RightPanel/ChoicesContainer"]
visible = false
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.85, 0.7, 1)
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_choice")
theme_override_styles/hover = SubResource("StyleBoxFlat_choice")
theme_override_styles/pressed = SubResource("StyleBoxFlat_choice")
text = "Choice 2"

[node name="ChoiceButton3" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer/RightPanel/ChoicesContainer"]
visible = false
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.85, 0.7, 1)
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_choice")
theme_override_styles/hover = SubResource("StyleBoxFlat_choice")
theme_override_styles/pressed = SubResource("StyleBoxFlat_choice")
text = "Choice 3"

[node name="ChoiceButton4" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer/RightPanel/ChoicesContainer"]
visible = false
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.85, 0.7, 1)
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_choice")
theme_override_styles/hover = SubResource("StyleBoxFlat_choice")
theme_override_styles/pressed = SubResource("StyleBoxFlat_choice")
text = "Choice 4"

[node name="ContinueButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer/RightPanel/ChoicesContainer"]
visible = false
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.9, 0.5, 1)
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_choice")
theme_override_styles/hover = SubResource("StyleBoxFlat_choice")
theme_override_styles/pressed = SubResource("StyleBoxFlat_choice")
text = "Continue..."
